Refactor / Feature: Updated the garden Tag profanity feature to give user a correct error message more often. This is done by re checking status of pending tags before showing gardens page.